<?xml version="1.0"?>
<package>
  <name>provider_thruster</name>
  <version>1.1.0</version>
  <description>The provider_thruster package</description>

  <author>Marc-Antoine Couture</author>

  <maintainer email="coumarc9@outlook.com">Marc-Antoine Couture</maintainer>
  <license>GPLv3</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>sonia_common</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>sonia_common</run_depend>

</package>
